examples/test/testpolicy3903.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3903
  namespace: namespace4
spec:
  podSelector:
    matchLabels:
      key26: value22
      key8: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value18
          key4: value10
          key35: value11
      podSelector:
        matchLabels:
          key47: value29
          key48: value21
          key0: value4
